# tetris-stm32

./: .gitignore  Cargo.toml  JLinkSettings.JLinkScript  Makefile  build.rs  memory.x  ozone_dev.jdebug  ozone_rel.jdebug  rustfmt.toml  scheme.rsl  test.txt  vsem.jdebug
jlink_rtt-0.1.0/: .cargo_vcs_info.json  Cargo.toml
jlink_rtt-0.1.0/src/: lib.rs
rust-phf/phf_shared/: Cargo.toml
src/: adc.rs  beeper.rs  button.rs  cb.rs  cmd.rs  codegen.rs  debug.rs  embbox.rs  lcd.rs  macros.rs  main.rs  mega_adc.rs  pause.rs  pld.rs  port.rs  sche.rs  splash.rs  tps.rs  usb.rs
src/mega_adc/: frame.rs
src/usb/: mon_cmd.rs  monitor.rs
stm32f1xx-hal/examples/: serial.rs
stm32f1xx-hal/src/: afio.rs  gpio.rs  rcc.rs  time.rs
