[package]
authors = ["Роман Масленников <m3angreen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "tetris-micro"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]

[patch.crates-io]
stm32f1xx-hal = { path = "stm32f1xx-hal" }

[[bin]]
name = "tetris-micro"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
