[package]
authors = ["Роман Масленников <m3angreen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "tetris-micro"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
nb = "0.1.2"
embedded-hal = "0.2.3"
jlink_rtt = "0.1.0"
panic_rtt = "0.2.0"
volatile-register = "0.2.0"
phf = { version = "0.7.24", default-features = false, features = ["macros"]}
usb-device = "0.2.3"
stm32-usbd = { version = "0.4", features = ["stm32f103xx"] }

[dependencies.tetris_nostd]
path = "../tetris_nostd"

[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]

[patch.crates-io]
stm32f1xx-hal = { path = "stm32f1xx-hal" }
jlink_rtt = { path = "jlink_rtt-0.1.0" }
phf = { path = "rust-phf/phf"}

[[bin]]
name = "tetris-micro"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
#opt-level = "z"
opt-level = 3