cargo-features = ["profile-overrides"] 

[package]
authors = ["Роман Масленников <m3angreen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "tetris-micro"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.6.0", features = ["inline-asm"] }
cortex-m-rt = "0.6.10"
nb = "0.1.2"
embedded-hal = "0.2.3"
jlink_rtt = "0.1.0"
panic_rtt = "0.2.0"
volatile-register = "0.2.0"
usb-device = "0.2.3"
stm32-usbd = { version = "0.4", features = ["stm32f103xx"] }
ellocopo = "0.1"

[dependencies.tetris_nostd]
path = "../tetris_nostd"

[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]

[patch.crates-io]
stm32f1xx-hal = { path = "stm32f1xx-hal" }
jlink_rtt = { path = "jlink_rtt-0.1.0" }
ellocopo = { path = "../ellocopo/ellocopo" }

[[bin]]
name = "tetris-micro"
test = false
bench = false

[profile.dev.overrides."*"] 
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
#opt-level = "z"
opt-level = 3